@@ -78,6 +78,12 @@ initvorbis(void)
 {
   PyObject *module, *dict;
 
+  py_dsp_type.ob_type = &PyType_Type;
+  py_block_type.ob_type = &PyType_Type;
+  py_vorbisfile_type.ob_type = &PyType_Type;
+  py_vinfo_type.ob_type = &PyType_Type;
+  py_vcomment_type.ob_type = &PyType_Type;
+
   module = Py_InitModule("ogg.vorbis", Vorbis_methods);
   dict = PyModule_GetDict(module);
   
